test/bad/type-return.tajada
f es un plato de café hola con salsa de queso { retorna hola. }
{}
